--- a/church-is-frontend-master/package.json
+++ b/church-is-frontend-master/package.json
@@ -5,29 +5,29 @@
   "author": "casper <orichcasper@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack serve --mode development --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "build": "node build/build.js"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "serve": "vite preview"
+},
+
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@vitejs/plugin-vue": "^5.2.1",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.0",
     "chart.js": "^3.7.0",
-
     "jquery": "^3.7.1",
     "js-file-download": "^0.4.12",
-
     "moment": "^2.30.1",
-    "@popperjs/core": "^2.11.8",
-    "vue": "^3.3.4",
+    "vite": "^6.2.1",
+    "vue": "^3.5.13",
     "vue-axios": "^3.5.1",
     "vue-cal": "^4.0.2",
     "vue-chartjs": "^4.1.1",
-
     "vue-email-editor": "^1.0.0",
     "vue-letter-avatar": "^0.1.6",
     "vue-router": "^4.3.0",
-    "vuejs-tree": "^4.0.0",
+    "vuejs-tree": "^3.0.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
@@ -55,15 +55,10 @@
     "sass-loader": "^13.2.0",
     "semver": "^7.6.2",
     "shelljs": "^0.8.5",
-
     "terser-webpack-plugin": "^5.3.9",
     "url-loader": "^4.1.1",
     "vue-loader": "^17.0.1",
-    "vue-style-loader": "^5.1.0",
-    "webpack": "^5.91.0",
-    "webpack-bundle-analyzer": "^4.9.0",
-    "webpack-dev-server": "^4.13.3",
-    "webpack-merge": "^5.10.0"
+    "webpack-bundle-analyzer": "^4.9.0"
   },
   "engines": {
     "node": ">= 16.0.0",
