--- a/church-is-frontend-master/package.json
+++ b/church-is-frontend-master/package.json
@@ -1,18 +1,16 @@
 {
   "name": "church-is-frontend",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "A Vue.js project using Vite",
   "author": "casper <orichcasper@gmail.com>",
   "private": true,
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "serve": "vite preview"
-},
-
+    "dev": "vite --clearScreen false",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "@vitejs/plugin-vue": "^5.2.1",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.0",
     "chart.js": "^3.7.0",
@@ -31,34 +29,14 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/plugin-transform-runtime": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
-    "@vue/compiler-sfc": "^3.3.4",
-    "autoprefixer": "^10.4.16",
-    "babel-loader": "^9.1.3",
-    "chalk": "^5.3.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.11.0",
-    "css-minimizer-webpack-plugin": "^5.0.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.9.2",
-    "node-notifier": "^10.0.1",
-    "node-sass": "^9.0.0",
-    "ora": "^7.0.1",
-    "portfinder": "^1.0.32",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/compiler-sfc": "^3.5.13",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.1.3",
     "postcss-url": "^10.1.3",
-    "rimraf": "^5.0.1",
-    "sass-loader": "^13.2.0",
-    "semver": "^7.6.2",
-    "shelljs": "^0.8.5",
-    "terser-webpack-plugin": "^5.3.9",
-    "url-loader": "^4.1.1",
-    "vue-loader": "^17.0.1",
-    "webpack-bundle-analyzer": "^4.9.0"
+    "sass-loader": "^13.2.0"
   },
   "engines": {
     "node": ">= 16.0.0",
