--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,21 +3,39 @@ name: Docker Build
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'church-is-frontend-master/**'
+  pull_request:
+    branches: [ "main" ]
+    paths:
+      - 'church-is-frontend-master/**'
+  workflow_dispatch:  # Allow manual triggering
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./church-is-frontend-master
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: "nixswinner"
-          password: "dckr_pat_t7BbeSIXBg-wPXBgFE6oHvPGD50"
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
+          context: ./church-is-frontend-master
           push: true
           tags: nixswinner/church-is:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
